# DocAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  inspect_ocr.py  pyproject.toml  query_invoices.py  requirements.txt  setup.py  setup.sh  test_eval.py
.github/workflows/: ci.yml
app/: auth.py  batch_eval.py  batch_store.py  main.py  models.py  pipeline_runner.py  rate_limit.py  webhooks.py  websocket_manager.py
data/: field_map.yaml  vendors.db
data/demo_documents/: ai_market_research.txt  business_report_q3_2024.txt  technical_architecture.txt
docai/: __init__.py  headroom_utils.py
docai/optimization/: __init__.py  example_builder.py  schema_optimizer.py
frontend/: README.md  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/@/components/ui/: document-viewer-sidebar.tsx
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: BatchEvalView.tsx  BatchQueueView.tsx  CompareView.tsx  DatasetView.tsx  DocumentViewer.tsx  ErrorBoundary.tsx  ExploreView.tsx  JsonViewer.tsx  KnowledgeGraph.tsx  MarkdownPreview.tsx  PipelineSidebar.tsx  PipelineView.tsx  QAMessage.tsx  ScoreGauge.tsx  SectionCard.tsx  StatusBadge.tsx  StepInfoTooltip.tsx  UploadShell.tsx  constants.tsx  pdf-block-resizable-shell.tsx
frontend/src/components/blocks/: layout-blocks-block.tsx
frontend/src/components/ui/: bounding-box-citations.tsx  button.tsx  docx-viewer.tsx  file-thumbnail.tsx  layout-blocks.tsx  pdf-viewer.tsx  resizable.tsx  schema-builder.tsx  xlsx-viewer.tsx
migrations/: README.txt
pipeline/: __init__.py  annotation_utils.py  base.py  config.py  orchestrator.py  schemas.py
pipeline/steps/: __init__.py  anomaly.py  confidence.py  cross_page.py  document_classifier.py  document_graph.py  embedding.py  end_to_end_vlm.py  evaluation.py  export.py  global_validation.py  hybrid_ocr.py  ingestion.py  knowledge_graph.py  llm_extraction.py  map_phase_extraction.py  multi_task.py  ocr.py  page_level_classifier.py  parallel_stream_splitter.py  rag.py  reduce_phase_stitching.py  retrieval.py  table_extraction.py  validation.py  vendor_lookup.py  vision_ocr.py
tests/: test_annotation_utils.py  test_api_endpoints.py  test_invoice_validator.py  test_language_detector.py  test_schemas.py  test_text_utils.py  test_validation.py
utils/: cache_manager.py  circuit_breaker.py  confidence_calibration.py  document_processor.py  field_rules_store.py  invoice_validator.py  language_detector.py  llm_client.py  models.py  observability.py  production_metrics.py  result_cache.py  retry.py  structured_logger.py  supplier_linker.py  text_utils.py  visual_traceability.py
workers/: __init__.py  celery_app.py  tasks.py
