[project]
name = "docai"
version = "0.1.0"
description = "Agentic Document Intelligence — local-first pipeline for extracting structured data from invoices and business documents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "DocAI Contributors" }]
keywords = ["document-intelligence", "ocr", "vlm", "invoice-extraction", "llm", "ollama", "local-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.1",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "PyPDF2>=3.0.1",
    "pymupdf>=1.23.9",
    "python-docx>=0.8.11",
    "pdfplumber>=0.9.0",
    "pandas>=2.1.4",
    "numpy>=1.25.2",
    "Pillow>=10.0.0",
    "pdf2image>=1.16.3",
    "rapidfuzz>=3.0.0",
    "networkx>=3.2.1",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "paddleocr>=2.7.0",
]
ml = [
    "transformers>=4.35.0",
    "sentence-transformers>=3.0.0",
    "accelerate>=0.24.0",
    "scikit-learn>=1.3.0",
]
embeddings = [
    "chromadb>=0.4.17",
]
viz = [
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
]
eval = [
    "seqeval>=1.2.2",
    "datasets>=2.14.0",
]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
headroom = [
    "headroom-ai>=0.28.0",
]
dspy = [
    "dspy>=3.2.0",
    "dspydantic>=0.1.6",
]
all = [
    "docai[ocr,ml,embeddings,viz,eval,dev]",
]

[tool.ruff]
target-version = "py310"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by line-length)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py"   = ["B011", "S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
exclude = ["frontend/", "node_modules/", ".venv/", ".cache/", "output/"]

[[tool.mypy.overrides]]
module = [
    "ollama.*",
    "rapidfuzz.*",
    "paddleocr.*",
    "pytesseract.*",
    "google.*",
    "streamlit.*",
    "chromadb.*",
    "dspy.*",
    "dspydantic.*",
    "headroom.*",
    "pdf2image.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
